code/kubernetes/msa-broadcaster/deployment-prod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: msa-broadcaster
  namespace: cowing-prod
  labels:
    app: msa-broadcaster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: msa-broadcaster
  template:
    metadata:
      labels:
        app: msa-broadcaster
    spec:
      containers:
        - name: msa-broadcaster
          image: ghcr.io/coinwing/cowing-msa-broadcaster
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "250m"
              memory: "256Mi"
      imagePullSecrets:
        - name: ghcr-login-secret
