code/kubernetes/msa-broadcaster/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: msa-broadcaster
  namespace: cowing-prod
spec:
  selector:
    app: msa-broadcaster
  ports:
  - port: 8081
    name: http
    targetPort: 8081
    protocol: TCP
  type: ClusterIP
