code/kubernetes/msa-broadcaster/virtualservice-prod.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: broadcaster-virtualservice
  namespace: cowing-prod
spec:
  hosts:
    - "ws.cowing.co.kr"
  gateways:
    - istio-system/istio-ingressgateway
  http:
    - match:
        - uri:
            prefix: /
      rewrite:
        uri: /ws
      route:
        - destination:
            host: msa-broadcaster
            port:
              number: 8081
      # WebSocket 연결을 위한 설정
      timeout: 1s
      retries:
        attempts: 0
